--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,6 @@ jobs:
       - name: run npm install
         run: npm install
 
-      - name: rename .env
-        run: cp .env.example .env
-
       - name: Log in to Docker Hub
         run: |
           echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
@@ -56,10 +53,10 @@ jobs:
           git config user.name ${{ secrets.GIT_USERNAME }}
           git branch -m main
           pwd
-          cat api-deploy.yaml
+          cat front-deploy.yaml
           pwd
-          sed -i "s+uiuq/diario-online-backend.*+uiuq/diario-online-backend:$RUN_NUMBER+g" api-deploy.yaml
-          cat api-deploy.yaml
+          sed -i "s+uiuq/diario-online-frontend.*+uiuq/diario-online-frontend:$RUN_NUMBER+g" front-deploy.yaml
+          cat front-deploy.yaml
           git add .
           git commit -m 'Done  by Github Actions   Job changemanifest: ${{ github.run_number }}'
           git push origin main
