--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-URL_API = http://52.87.94.153:8080
-URL_DEV = http://localhost:8080
+VITE_URL_API = http://52.87.94.153:8080
+VITE_URL_DEV = http://localhost:8080
