--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "dotenv": "^16.3.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
+    "react-quill-image-uploader": "^0.1.1",
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0",
     "zustand": "^4.4.4"
