--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "quill": "^1.3.7",
+    "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
